--- a/PumaProject/src/app/footer/footer.component.html
+++ b/PumaProject/src/app/footer/footer.component.html
@@ -1,1 +1,68 @@
-<p>footer works!</p>
+<footer>
+    <br>
+    <div class="navigations">
+        <div class="nav-first">
+            <h1>SUPPORT</h1>
+            <a routerLink="">Contact Us</a>
+            <a routerLink="">Shipping and Delivery</a>
+            <a routerLink="">Terms & Conditions</a>
+            <a routerLink="">Do Not Sell Or Share My Information</a>
+            <a routerLink="">Store Locator</a>
+            <a routerLink="">Buy a Gift Card</a>
+            <a routerLink="">Service Discount</a>
+            <a routerLink="">Promotion Exclusions</a>
+            <a routerLink="">Cookie Settings</a>
+        </div>
+        <div class="nav-first">
+            <h1>FAQ</h1>
+            <a routerLink="">Return Policy</a>
+            <a routerLink="">Privacy Policy</a>
+            <a routerLink="">Transparency in Supply Chain</a>
+            <a routerLink="">PUMA NYC Flagship Store</a>
+            <a routerLink="">Gift Card Balance</a>
+            <a routerLink="">Student Discount</a>
+            <a routerLink="">Refer a Friend</a>
+        </div>
+        <div class="nav-first">
+            <h1>ABOUT</h1>
+            <a routerLink="">Company</a>
+            <a routerLink="">Corporate News</a>
+            <a routerLink="">Press Center</a>
+            <a routerLink="">#REFORM</a>
+            <a routerLink="">Investors</a>
+            <a routerLink="">Sustainability</a>
+            <a routerLink="">Careers</a>
+        </div>
+        <div class="nav-first">
+            <h1>STAY UP TO DATE</h1>
+            <a routerLink="">Sing Up for Email</a>
+            <h1>EXPLORE</h1>
+            <div class="apps">
+                <div class="app"><a routerLink=""><img src="/assets/PUM.DE.D-7b705fb4.png" width="30px" height="25px"></a></div>
+                <div class="app"><a routerLink=""><img src="/assets/PUM.DE.D-7b705fb4.png" width="30px" height="25px"></a></div>
+            </div>
+        </div>
+    </div>
+    <div class="hr"></div>
+    <div class="last">
+        <div class="social">
+            <a routerLink=""><img src="/assets/Youtube.png" width="25px" height="25px"></a>
+            <a routerLink=""><img src="/assets/Twitter.png" width="25px" height="25px"></a>
+            <a routerLink=""><img src="/assets/Pinterest.png" width="25px" height="25px"></a>
+            <a routerLink=""><img src="/assets/Instagram.png" width="25px" height="25px"></a>
+            <a routerLink=""><img src="/assets/Facebook.png" width="25px" height="25px"></a>
+        </div>
+        <div class="country">
+            <div class="chosen">
+                <a routerLink="">
+                    <img src="/assets/USFlag.png" width="40px" height="40px">
+                    <h1>UNITED STATES</h1>
+                </a>
+            </div>
+        </div>
+        <div class="copyright">
+            <p>© PUMA NORTH AMERICA, INC. <br>
+                <a routerLink="" style="color: gray;">IMPRINT AND LEGAL DATA</a></p>
+        </div>
+    </div>
+</footer>
