--- a/PumaProject/src/app/nav-bar/nav-bar.component.html
+++ b/PumaProject/src/app/nav-bar/nav-bar.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="nav-main">
         <div class="navigation-links">
-            <img src="/assets/PUM.DE.D-7b705fb4.png" width="25px" height="25px" routerLink="/store" style="cursor: pointer;">
+            <img src="/assets/PUM.DE.D-7b705fb4.png" width="30px" height="25px" routerLink="/store" style="cursor: pointer;">
             <a routerLink="/store">Back to School</a>
             <a routerLink="/store">Woman</a>
             <a routerLink="/store">Men</a>
@@ -15,7 +15,11 @@
             <a routerLink="/store">Sale</a>
         </div>
         <div class="search-account">
-            <button><img src="/assets/png-transparent-magnifying-glass-computer-icons-magnifying-glass-glass-art-symbol.png" width="25px" height="25px"> Search</button>
+            <button class="search-button"><img src="/assets/images.png" width="25px" height="25px"> Search</button>
+            <a routerLink=""><img src="/assets/2849825_romance_multimedia_love_like_heart_icon.png" width="25px" height="25px"></a>
+            <a routerLink=""><img src="/assets/9025885_shopping_cart_icon.png" width="25px" height="25px"></a>
+            <a routerLink=""><img src="/assets/9035563_person_outline_icon.png" width="25px" height="25px"></a>
         </div>
     </div>
 </nav>
+
