--- a/PumaProject/src/app/home/home.component.html
+++ b/PumaProject/src/app/home/home.component.html
@@ -1,3 +1,8 @@
+<!-- REG -->
+<div class="get_discount">
+    <button><b>GET 20% OFF</b></button>
+</div>
+
 <div class="discount">
     <h2>ENDS TONIGHT: 30% OFF ORDERS $125+</h2>
     <h3>SAVE ON 100s OF STYLES</h3>
@@ -10,21 +15,160 @@
     <div class="card_img"><img src="assets\tl-PH.ini" alt=""></div>
     <div class="Flex_H_txt"><h3>LAFRANCE UNTOCHABLE</h3></div>
     <div class="Flex_P_txt"><p>Featuring attention-grabbing details that lean into Y2K’s extreme aesthetics, the LaFrancé Untouchable is designed to help you stand out.</p></div>
-    <div class="btn_div"><button>SHOP NOW ></button></div>    
+    <div class="btn_div"><button><b>SHOP NOW <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#000000"><path d="M522-480 333-669l51-51 240 240-240 240-51-51 189-189Z"/></svg></b></button></div>    
 </div>
 
 
     <div class="head">
         <div class="card_img"><img src="assets\a4994426-89a7-4d3a-9f12-7cfea14cc530.jpeg" alt=""></div>
-        <div class="Flex_H_txt"><h3>LAFRANCE UNTOCHABLE</h3></div>
-        <div class="Flex_P_txt"><p>Featuring attention-grabbing details that lean into Y2K’s extreme aesthetics, the LaFrancé Untouchable is designed to help you stand out.</p></div>
-        <div class="btn_div"><button>SHOP NOW ></button></div>    
+        <div class="Flex_H_txt"><h3>THE CREEPER PHATTY</h3></div>
+        <div class="Flex_P_txt"><p>Class is in session. The new FENTY x PUMA Creeper Phatty by Rihanna is wrapped in soft corduroy and suede, with gold aglets and the classic Creeper sole.</p></div>
+        <div class="btn_div"><button><b>SHOP NOW <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#000000"><path d="M522-480 333-669l51-51 240 240-240 240-51-51 189-189Z"/></svg></b></button></div>    
     </div>
 
         <div class="head">
             <div class="card_img"><img src="assets\1768a808-d8f9-466d-b67d-9bb5acb62ba7.jpeg" alt=""></div>
-            <div class="Flex_H_txt"><h3>LAFRANCE UNTOCHABLE</h3></div>
-            <div class="Flex_P_txt"><p>Featuring attention-grabbing details that lean into Y2K’s extreme aesthetics, the LaFrancé Untouchable is designed to help you stand out.</p></div>
-            <div class="btn_div"><button>SHOP NOW ></button></div>   
+            <div class="Flex_H_txt"><h3>WINNING FORMULA</h3></div>
+            <div class="Flex_P_txt"><p>New season, new winning formula. Turbocharge your skills with the brand-new generation of ULTRA, redesigned KING, and fresh color update of FUTURE.</p></div>
+            <div class="btn_div"><button><b>SHOP NOW <svg xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#000000"><path d="M522-480 333-669l51-51 240 240-240 240-51-51 189-189Z"/></svg></b></button></div>   
         </div>
+</div>
+
+<!-- <div class="banner">
+    <div class="banner_text">
+        <h2>
+            ENDS TONIGHT 
+            <br>
+            30% OFF WHEN YOU SPEND $125+
+        </h2>
+    </div>
+
+    <div class="save">
+        <p>LAST CHANCE TO USE CODE: <b>SAVE30</b></p>
+        <p>EXCLUSIONS APPLY</p>
+    </div>
+
+    <div class="shop_now">
+        <button>SHOP NOW</button>
+    </div>
+     <img src="assets\88ee72c875aee815a9e40ad377458254bff25e3d-2000x486.webp" alt="">
+</div> -->
+<!-- SLIDER -->
+
+<!-- SLIDER -->
+
+<div class="classic">
+    <div class="padding">
+    <div class="classic_text">
+        <h2>PALERMO</h2>
+        <p>REWRITE THE CLASSICS</p>
+    </div>
+
+    <div class="Men_Women">
+        <button><b>MEN'S CLASSIC</b></button>
+        <button><b>WOMEN'S CLASSIC</b></button>
+    </div>
+</div>
+    <img src="assets\e3156c129b8944b69ae20172f06f60f0e99e25b5-2000x694.webp" alt="">
+</div>
+
+
+<div class="By_You">
+    <div class="comunity_header">
+        <p>TRIED, TRUE, AND LOVED BY YOU</p>
+    </div>
+
+    <div class="comuntity_paragaph">
+        <p>MENTION @PUMA ON INSTAGRAM</p>
+    </div>
+
+    <div class="Add_your">
+        <p><img src="assets\photo-camera-interface-symbol-for-button.png" alt="">ADD YOUR PHOTO</p>
+    </div>
+</div>
+
+
+
+<!-- SLIDER -->
+<h1 class="h11">SLIDER</h1>
+<!-- SLIDER -->
+
+
+
+<div class="cashback">
+    <div class="model_img">
+        <img src="assets\image-Photoroom.png" alt="">
+    </div>
+
+    <div class="flex_text">
+        <h4>SPEND $100 GET $15 BACKPACK</h4>
+        <p>OFFER VALID 7/23 – 8/5. EXCLUSIONS APPLY.</p>
+
+        <div class="cash_button">
+            <button><b>SHOP SHOW</b></button>
+        </div>
+    </div>
+</div>
+
+
+<div class="back_school">
+    <div class="school_img">
+        <img src="assets\25419b19bc1821bd271ac4bc7cb964e9643851e0-1536x1536.jpg" alt="">
+        <div class="school_text">
+            <h4>MEN'S BACK TO SCHOOL</h4>
+        </div>
+    </div>
+
+    <div class="school_img">
+        <img src="assets\ee8e7377b9419359416fd30ebc603409c4a6d5c7-1536x1536.jpg" alt="">
+        <div class="school_text">
+            <h4>WOMEN'S BACK TO SCHOOL</h4>
+        </div>
+    </div>
+
+    <div class="school_img">
+        <img src="assets\6b70b79b64429f37e9d582991cacd91d298726ac-1536x1536.jpg" alt="">
+        <div class="school_text">
+            <h4>KID'S BACK TO SCHOOL</h4>
+        </div>
+    </div>
+
+    <div class="school_img">
+        <img src="assets\68f4425d6f03451032b06fcba2b1d93137122c85-1536x1536.jpg" alt="">
+        <div class="school_text">
+            <h4>SHOP ALL BACK TO SCHOOL</h4>
+        </div>
+    </div>
+</div>
+
+<div class="sport">
+    <div class="sport_img">
+        <img src="assets\2f1969cbf23a903ff7cfadf26cd17c9615944ae4-2000x694.webp" alt="">
+
+        <div class="sport_text">
+            <div class="sport_header"><h4>SEE THE GAME LIKE WE DO</h4></div>
+            <div class="sport_paragraph"><p>FOREVER. FASTER.</p></div>
+        </div>
+
+        <div class="sport_button">
+            <button><b>MEN'S SPORTS</b></button>
+            <button><b>WOMEN'S SPORTS</b></button>
+        </div>
+    </div>
+</div>
+
+<div class="must_have">
+    <h3>MUST-HAVES</h3>
+    <br>
+    <!-- SLIDER -->
+    <h5>SLIDER</h5>
+    <!-- SLIDER -->
+</div>
+
+
+<div class="pretier_photos">
+    <h2>AS WORN BY YOU</h2>
+<!-- SLIDER -->
+<h5>SLIDER</h5>
+<!-- SLIDER -->
 </div>
