--- a/PumaProject/src/app/home/home.component.css
+++ b/PumaProject/src/app/home/home.component.css
@@ -29,3 +29,265 @@
     width: 25rem;
     background-color: #F6F7F8;
 }
+
+.btn_div, .btn_div button{
+    width: 100%;
+    height: 2rem;
+    background-color:#F6F7F8;
+    border: none;
+    cursor: pointer;
+}
+.Flex_P_txt{
+    font-size: 0.9rem;
+    color: rgb(177, 177, 177);
+}
+
+.btn_div b{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+.btn_div :hover{
+    background-color: rgb(215, 215, 215);
+}
+
+.banner{
+    background-color:rgb(113, 60, 92);
+    width: 100%;
+    height: 20rem;
+    margin-top: 2rem;
+}
+
+.banner img{
+    width: 100%;
+}
+
+.banner_text{
+    position: absolute;
+    text-align: center;
+    margin-left:50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    top: 120%;
+    color: white;
+    font-size: 1.2rem;
+}
+
+.save{
+    position: absolute;
+    text-align: center;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    color: white;
+    top: 135%; 
+    font-size: 1.1rem;
+}
+
+.shop_now button{
+    background-color: white;
+    border: none;
+    width: 8%;
+    height: 2.5rem;
+    position: absolute;
+    top: 150%;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    font-weight: 500;
+}
+
+.classic{
+    margin-top: 10rem;
+}
+
+.padding{
+    padding-left: 3rem;
+}
+
+.classic img{
+    width: 100%;
+    height: 80%;
+    opacity: 0.85;
+}
+
+.classic_text{
+    position: absolute;
+    top: 148%;
+    color: rgb(0, 0, 0);
+    z-index: 1;
+    letter-spacing: -1px;
+    font-size: 1.3rem;
+    margin: 0;
+}
+
+.classic_text h2{
+    font-size: 2.3rem;
+}
+
+.classic_text p{
+    font-size: 1.4rem;
+    font-weight: 100;
+}
+
+.Men_Women button{
+    background-color: black;
+    color: white;
+    border: none;
+    height:2.5rem;
+    z-index: 1;
+    width: 13rem;
+}
+
+.Men_Women{
+    display: flex;
+    gap: 1rem;
+    position: absolute;
+    top: 170%;
+}
+
+.By_You{
+    text-align: center;
+    color: #4d5866;
+    font-weight: 100;
+}
+
+.comunity_header{
+    font-size: 1.5rem;
+    letter-spacing: 2px;
+}
+
+.h11{
+    text-align: center;
+}
+
+.cashback{
+    background-color: #d7d7d7;
+    display: flex;
+    justify-content: space-between;
+}
+
+.model_img, .model_img img{
+    width: 30rem;
+}
+
+.flex_text{
+    margin-top: 12%;
+    padding-right: 4rem;
+}
+
+.flex_text h4{
+    font-size: 2.3rem;
+    margin: 0;
+}
+
+.flex_text p{
+    font-size: 1.2rem;
+    display: flex;
+    justify-content: flex-end;
+}
+
+.cash_button button{
+    background-color: black;
+    border: none;
+    color: white;
+    height: 2.5rem;
+    width: 8rem;
+}
+
+.cash_button{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.school_img, .school_img img{
+    width: 21rem;
+    position: relative;
+}
+
+.back_school{
+    display: flex;
+    justify-content: space-around;
+    margin-top: 2rem;
+}
+
+.school_text{
+    position: absolute;
+    bottom: 0;
+    padding-left: 5%;
+    font-size: 1.3rem;
+    color: white;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgb(103, 103, 103);
+}
+
+.sport_img, .sport_img img{
+    width: 100%;
+    position: relative;
+    display: inline-block;
+    margin-top: 2rem;
+}
+
+.sport_text{
+    position: absolute;
+    top: 14%; 
+    left: 50%;
+    transform: translateX(-50%);
+    padding-top: 8%; 
+    color: white; 
+    text-align: center; 
+    z-index: 2;
+}
+
+.sport_button{
+    position: absolute;
+    bottom: 35%;
+    left: 50%;
+    transform: translate(-50%, -20%);
+    z-index: 2;
+    display: flex;
+    gap: 1rem;
+}
+
+.sport_button button{
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
+    border: none;
+    height: 2.5rem;
+    letter-spacing: 2px;
+    padding: 2%;
+    display: inline;
+}
+
+.sport_text h4{
+    font-size: 2.2rem;
+    margin: 0;
+}
+
+.sport_text p{
+    font-size: 1.5rem;
+    margin: 0;
+}
+
+.pretier_photos{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #4d5866;
+}
+
+/* REG */
+.get_discount{
+    position: fixed;
+    bottom: 0;
+    padding-bottom:2%;
+    padding-left: 2%;
+    z-index: 100;
+}
+
+.get_discount button{
+    width: 10rem;
+    height: 3rem;
+    background-color: white;
+    border: 2px solid black; 
+    cursor: pointer;
+}
