--- a/PumaProject/src/styles.css
+++ b/PumaProject/src/styles.css
@@ -1,9 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
-body{
-    font-family: "Bebas Neue", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-    margin: 0;
-    padding: 0;
-  }
-  
+body {
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  margin: 0;
+  padding: 0;
+}
